Center content chart and fix chart resizing on window resize. Mostly works with mobile, but it's really clunky. Probably drawing too much on the canvas for the poor ARM processor to keep up.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -144,7 +144,7 @@ div.content_table
 
 div.content_chart
 {
-    margin: 0.3em;
+    margin: 0.3em auto;
     width: 98%;
     height: 300px;
     clear: both;
